# financial-data-science

./: .gitignore  CHANGELOG.md  CITATION.cff  CONTRIBUTING.md  README.md  docs_mtest.md  mkdocs.yml  pyproject.toml
.claude/: settings.local.json
.github/workflows/: deploy.yml
binder/: environment.yml  postBuild  requirements.txt
book/: index.md  preface.md
book/appendix/: a-setup.md  b-math-review.md  c-data-dictionary.md  d-glossary.md
book/part1/: 01-introduction.md  02-python-toolkit.md  03-data-acquisition.md  04-eda-visualization.md
book/part2/: 05-returns-risk.md  06-time-series.md  07-factor-models.md  08-panel-regression.md
data/: README.md
notebooks/: appendix_b_math.ipynb  ch01_introduction.ipynb  ch02_python_toolkit.ipynb  ch03_data_acquisition.ipynb  ch04_eda_visualization.ipynb  ch05_returns_risk.ipynb  ch06_batch1.json  ch06_batch2.json  ch06_batch3a.json  ch06_cells_partial2.json  ch06_partial.json  ch06_time_series.ipynb  ch07_factor_models.ipynb  ch08_panel_regression.ipynb  ch09_supervised_learning.ipynb  ch10_feature_engineering.ipynb  ch11_ensemble_trees.ipynb  ch12_deep_learning.ipynb  ch13_nlp_text.ipynb  ch14_portfolio_optimization.ipynb  ch14_unsupervised.ipynb  ch15_backtesting.ipynb  ch15_high_frequency.ipynb  ch16_credit_risk.ipynb  ch16_portfolio_optimization.ipynb  ch17_backtesting.ipynb  ch17_llm_finance.ipynb  ch18_ai_agents.ipynb  ch18_credit_risk.ipynb  ch19_llm_finance.ipynb  ch20_ai_agents.ipynb
scripts/: build_pdf.py  export_notebooks.py  fetch_data.py  fix_table_math.py  gen_ch03_notebook.py  gen_ch07_notebook.py  make_figures.py  make_sample_data.py
tests/: test_smoke.py
(+31 files in other folders)
